@@ -1,4 +1,5 @@
 0.06
+ - Update Module::Install to 1.19 version.
 
 0.05 2015-09-22T11:18:27+02:00
  - Add 'readme_from' directive to Makefile.PL.
